[workspace]
members = ["token-gated-vote-contract"]
resolver = "2"

[workspace.package]
authors = ["Padparadscho <contact@padparadscho.com>"]
description = "A comprehensive suite of Soroban smart contracts implementing various governance and voting mechanisms."
edition = "2021"
homepage = "https://github.com/padparadscho/soroban-governance-models#readme"
license = "MIT"
repository = "https://github.com/padparadscho/soroban-governance-models"
rust-version = "1.74"
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.8" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
