[package]
authors.workspace = true
description = "Quadratic vote contract - democratic voting system where vote influence equals the square root of votes cast."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "quadratic-vote-contract"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
