[package]
authors.workspace = true
description = "Token-weighted vote contract - plutocratic voting system where vote power equals token holdings."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "token-weighted-vote-contract"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
